--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ html, body
   margin: 0;
 }
 
+body
+{
+background-image: linear-gradient(to right top, #33a0f1, #2591d9, #1882c1, #0a73aa, #006494);
+}
 
 .header
 {
